--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -3,156 +3,52 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Admin Dashboard - Warehouse Management</title>
-    <style>
-        body {
-            margin: 0;
-            font-family: Arial, sans-serif;
-            background-color: #f4f6f8;
-        }
-
-        /* Sidebar */
-        .sidebar {
-            width: 230px;
-            height: 100vh;
-            background-color: #1f2937;
-            color: white;
-            position: fixed;
-            top: 0;
-            left: 0;
-            display: flex;
-            flex-direction: column;
-            padding-top: 20px;
-        }
-
-        .sidebar h2 {
-            text-align: center;
-            margin-bottom: 30px;
-            font-size: 22px;
-        }
-
-        .sidebar a {
-            padding: 15px 20px;
-            text-decoration: none;
-            color: #cbd5e1;
-            font-size: 16px;
-            display: block;
-        }
-
-        .sidebar a:hover {
-            background-color: #374151;
-            color: white;
-        }
-
-        /* Top bar */
-        .topbar {
-            margin-left: 230px;
-            height: 60px;
-            background-color: white;
-            display: flex;
-            align-items: center;
-            justify-content: flex-end;
-            padding: 0 20px;
-            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-        }
-
-        .topbar button {
-            margin-left: 15px;
-            padding: 8px 16px;
-            border: none;
-            background-color: #1e40af;
-            color: white;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-
-        .topbar button:hover {
-            background-color: #1d4ed8;
-        }
-
-        /* Main content area */
-        .content {
-            margin-left: 230px;
-            padding: 20px;
-        }
-
-        .content h1 {
-            color: #2d3748;
-            margin-bottom: 20px;
-        }
-
-        /* Table styling */
-        table {
-            width: 100%;
-            border-collapse: collapse;
-            background-color: white;
-            border-radius: 8px;
-            overflow: hidden;
-        }
-
-        th, td {
-            padding: 12px;
-            border-bottom: 1px solid #e5e7eb;
-        }
-
-        th {
-            background-color: #f1f5f9;
-            text-align: left;
-        }
-
-        tr:hover {
-            background-color: #f9fafb;
-        }
-
-    </style>
+    <title>Admin Dashboard</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/dashboard.css">
 </head>
 <body>
 
-    <!-- Sidebar -->
     <div class="sidebar">
-        <h2>Admin Panel</h2>
-        <a href="#">Dashboard</a>
-        <a href="#">Employees</a>
-        <a href="#">Warehouses</a>
-        <a href="#">Inventory</a>
-        <a href="#">Reports</a>
-        <a href="#">Settings</a>
+        <h2>Warehouse</h2>
+        <ul>
+            <li><a href="#" id="dashboard-link">Dashboard</a></li>
+            <li><a href="#" id="users-link">Manage Users</a></li>
+            <li><a href="#">Inventory</a></li>
+            <li><a href="#">Settings</a></li>
+        </ul>
+        <button id="logoutBtn" class="logout-btn">Log Out</button>
     </div>
 
-    <!-- Top bar -->
-    <div class="topbar">
-        <button>Settings</button>
-        <button>Logout</button>
+    <div class="main-content" id="main-content">
+        <header>
+            <h1>Welcome, <span id="username-display">Admin</span></h1>
+            <p>Role: <span id="role-display">...</span></p>
+        </header>
+
     </div>
 
-    <!-- Main content -->
-    <div class="content">
-        <h1>Employees Overview</h1>
-
-        <table>
-            <tr>
-                <th>ID</th>
-                <th>Name</th>
-                <th>Role</th>
-                <th>Warehouse</th>
-                <th>Actions</th>
-            </tr>
-            <tr>
-                <td>1</td>
-                <td>Alex Popescu</td>
-                <td>Manager</td>
-                <td>Warehouse A</td>
-                <td>Edit | Delete</td>
-            </tr>
-            <tr>
-                <td>2</td>
-                <td>Maria Ionescu</td>
-                <td>Employee</td>
-                <td>Warehouse B</td>
-                <td>Edit | Delete</td>
-            </tr>
-        </table>
+    <div id="userModal" class="modal">
+        <div class="modal-content">
+            <span class="close-btn" id="closeModal">&times;</span>
+            <h2>Add New User</h2>
+            <form id="addUserForm">
+                <input type="text" id="new_username" placeholder="Username" required>
+                <input type="password" id="new_password" placeholder="Password" required>
+                <input type="text" id="new_firstname" placeholder="First Name">
+                <input type="text" id="new_lastname" placeholder="Last Name">
+                <input type="email" id="new_email" placeholder="Email">
+                <select id="new_role">
+                    <option value="employee">Employee</option>
+                    <option value="manager">Manager</option>
+                    <option value="admin">Admin</option>
+                </select>
+                <button type="submit" class="add-btn" style="width: 100%;">Create User</button>
+            </form>
+        </div>
     </div>
+
+    <script src="js/admin.js"></script>
 
 </body>
 </html>
