Updated fronted for multi-database use

--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -38,6 +38,10 @@
                 <input type="text" id="new_firstname" placeholder="First Name">
                 <input type="text" id="new_lastname" placeholder="Last Name">
                 <input type="email" id="new_email" placeholder="Email">
+                <label for="warehouse_select">Assign to Warehouse:</label>
+                <select id="warehouse_select" required>
+                    <option value="">Headquarters (Main)</option>
+                </select>
                 <select id="new_role">
                     <option value="employee">Employee</option>
                     <option value="manager">Manager</option>
