Implemented early inventory management

--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -14,7 +14,7 @@
         <ul>
             <li><a href="#" id="dashboard-link">Dashboard</a></li>
             <li><a href="#" id="users-link">Manage Users</a></li>
-            <li><a href="#">Inventory</a></li>
+            <li><a href="#" id="inventory-link">Inventory</a></li>
             <li><a href="#">Settings</a></li>
         </ul>
         <button id="logoutBtn" class="logout-btn">Log Out</button>
