Added transfer capabilities with interaction from Managers and Employees

--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -15,7 +15,7 @@
             <li><a href="#" id="dashboard-link">Dashboard</a></li>
             <li><a href="#" id="users-link">Manage Users</a></li>
             <li><a href="#" id="inventory-link">Inventory</a></li>
-            <li><a href="#">Settings</a></li>
+            <li><a href="#" id="transfers-link">Transfers</a></li>
         </ul>
         <button id="logoutBtn" class="logout-btn">Log Out</button>
     </div>
