--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -6,6 +6,7 @@
     <title>Admin Dashboard</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/dashboard.css">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
 
@@ -26,6 +27,35 @@
             <p>Role: <span id="role-display">...</span></p>
         </header>
 
+        <div class="charts-wrapper" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(400px, 1fr)); gap: 20px; margin-top: 20px;">
+        
+            <div class="chart-card" style="background: white; padding: 20px; border-radius: 8px; box-shadow: 0 2px 5px rgba(0,0,0,0.1);">
+                <h3>Inventory Distribution</h3>
+                <div style="height: 300px; position: relative;">
+                    <canvas id="inventoryChart"></canvas>
+                </div>
+            </div>
+
+            <div class="chart-card" style="background: white; padding: 20px; border-radius: 8px; box-shadow: 0 2px 5px rgba(0,0,0,0.1);">
+                <h3>Transfer Statuses</h3>
+                <div style="height: 300px; position: relative;">
+                    <canvas id="transferChart"></canvas>
+                </div>
+            </div>
+
+            <div class="chart-card" style="background: white; padding: 20px; border-radius: 8px; box-shadow: 0 2px 5px rgba(0,0,0,0.1);">
+                <h3>Manager Volume</h3>
+                <div style="height: 300px; position: relative;">
+                    <canvas id="managerChart"></canvas>
+                </div>
+            </div>
+
+            <div class="chart-card" style="background: white; padding: 20px; border-radius: 8px; box-shadow: 0 2px 5px rgba(0,0,0,0.1);">
+                <h3>Employee Performance</h3>
+                <div style="height: 300px; position: relative;">
+                    <canvas id="employeeChart"></canvas>
+                </div>
+            </div>
     </div>
 
     <div id="userModal" class="modal">
